--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/BlakeGuilloud/organizer-api/issues"
   },
-  "homepage": "https://github.com/BlakeGuilloud/organizer-api#readme"
+  "homepage": "https://github.com/BlakeGuilloud/organizer-api#readme",
+  "dependencies": {
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "mongoose": "^4.9.8"
+  }
 }
