initial express app up and running

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -Rf lib && babel src -d lib --copy-files",
+    "dev": "npm run build && node app.js",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,8 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mongoose": "^4.9.8"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1"
   }
 }
