--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "mongoose": "^4.9.8"
+    "mongoose": "^4.9.8",
+    "tael": "^1.0.10"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1"
