--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 node_modules
 env.config.js
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
