--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   },
   "homepage": "https://github.com/BlakeGuilloud/organizer-api#readme",
   "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mongoose": "^4.9.8",
     "tael": "^1.0.10"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0"
   }
 }
